<resources>
    <string name="app_name">TugasSatu</string>
    <string name="dara">Hello World!</string>
    <string name="btn_txt">klik aja</string>
    <string name="ubah">Click-click</string>
    <string name="first">Love is a mystery</string>
    <string name="second">Let\'s see how much you like each other!</string>
    <string name="nama1">Masukkan Nama</string>
    <string name="nama2">Masukkan Nama Pasanganmu</string>
    <string name="click">Click</string>
    <string name="defaul100_untuk1">100%</string>
    <string name="default100_untuk2">100%</string>

</resources>