<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3DEDE"
    tools:context=".MainActivity"
    android:padding="0dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="237dp"
        android:layout_height="177dp"
        android:layout_marginLeft="-25dp"
        android:src="@drawable/gambar_atas_kiri"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/paprika_regular"
        android:gravity="center"
        android:text="@string/first"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/paprika_regular"
        android:gravity="center"
        android:text="@string/second"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtFirst"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etNama"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/edit_text_bg"
        android:elevation="6dp"
        android:hint="@string/nama1"
        android:textColorHint="#96000000"
        android:textColor="@color/black"
        android:fontFamily="@font/paprika_regular"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSecond" />

    <EditText
        android:id="@+id/etNamaKedua"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_bg"
        android:elevation="6dp"
        android:hint="@string/nama2"
        android:textColorHint="#96000000"
        android:textColor="@color/black"
        android:fontFamily="@font/paprika_regular"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNama" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_bg"
        android:backgroundTint="@null"
        android:elevation="6dp"
        android:text="@string/click"
        android:fontFamily="@font/paprika_regular"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNamaKedua"/>

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="270dp"
        android:layout_height="264dp"
        android:src="@drawable/gambar_sejoli"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />

    <TextView
        android:id="@+id/txtOverImage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaul100_untuk1"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="@id/imgBackground"
        app:layout_constraintLeft_toLeftOf="@id/imgBackground"
        app:layout_constraintRight_toRightOf="@id/imgBackground"/>


    <TextView
        android:id="@+id/txtOverImage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/default100_untuk2"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:layout_marginTop="-1.5dp"
        app:layout_constraintBottom_toBottomOf="@id/imgBackground"
        app:layout_constraintEnd_toEndOf="@id/imgBackground"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="@id/imgBackground"
        app:layout_constraintTop_toBottomOf="@id/txtOverImage1"
        app:layout_constraintVertical_bias="0.075" />

    <ImageView
        android:layout_width="294dp"
        android:layout_height="173dp"
        android:layout_marginRight="-63dp"
        android:src="@drawable/gambar_bawah_kanan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>